    "triSht" and "tri" classes (produced by interp and tripack
    packages.)
  - The plot3d.mesh3d() method now has the same default
    for "aspect" as the default method.
  - Probably due to a compiler change, rgl.bbox() was 
    returning 0/1 instead of the id of the axes.
  - pch3d() was failing in rglwidget() for some shapes.
    (Reported by Luca Scrucca.)
  - pch3d() now allows separate "color" and "bg" specifications
    for each point.  In addition, the default for the "lit"
    material property is now FALSE, so by default filled
    symbols will match the requested colour regardless of 
    lighting.
  - par3d(mouseMode = "none") was not implemented properly,
    so appeared to be a no-op.
  - plot3d() methods for objects of class "formula" and "lm"
    and a persp3d() method for objects of class "formula"
    have been added.  (A bug in the implementation of
    as.mesh3d.deldir() was found and fixed during the 
    latter addition.)
  - as.mesh3d(), plot3d() and persp3d() methods for "ashape3d"
    objects from the alphashape3d package have been added.
  - The mouse mode (trackball, zoom, etc.) can now be applied
    separately to each individual subscene in a scene.
    (By default the mode is inherited from the root subscene.)
  - Added par3d("userProjection"), to allow the user to supply
    a change to the projection after all other display calculations 
    have been done.
  - Added par3d("activeSubscene"), to allow mouse callback
    functions to determine which subscene was clicked.
  - Selection functions did not work well with subscenes.
  - Deleting an object that has been added as a 3D sprite
    caused rgl to crash.
  - A number of memory bugs found by rchk have been fixed.

0.100.19
  - Fix some bugs detected by valgrind
  
0.100.20
  - open3d() now signals an error if unnamed parameters are used
  - toggleWidget() now makes it easier to initialize the scene with
    some objects hidden.